Archive2/ea/a207562250de21/main.cpp
#include <unordered_map>

int main()
{
    std::unordered_map<int,int> m = {};
}
